--- a/projeto-2.ipynb
+++ b/projeto-2.ipynb
@@ -7260,7 +7260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7280,7 +7280,6 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y_log, test_size=0.2, random_state=100)\n",
     "\n",
-    "# Convert boolean columns to integers\n",
     "for col in X_train.select_dtypes(include=['bool']).columns:\n",
     "    X_train[col] = X_train[col].astype(int)\n",
     "\n",
@@ -7288,30 +7287,7 @@
     "    X_test[col] = X_test[col].astype(int)\n",
     "\n",
     "\n",
-    "\n",
-    "# Make sure X_test has the same columns as X_train\n",
-    "X_test = X_test.reindex(columns=X_train.columns, fill_value=0)\n",
-    "\n",
-    "# Now train the model on the processed data\n",
-    "dtree = DecisionTreeRegressor(max_depth=5, random_state=42)\n",
-    "dtree.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions (still in log space)\n",
-    "y_pred_log = dtree.predict(X_test)\n",
-    "\n",
-    "# Convert predictions back to original scale\n",
-    "y_pred = np.exp(y_pred_log)\n",
-    "\n",
-    "y_pred_log = dtree.predict(X_test)\n",
-    "y_pred = np.exp(y_pred_log)\n",
-    "\n",
-    "\n",
-    "y_test_original = np.exp(y_test)\n",
-    "# Calculate metrics in original scale\n",
-    "mse = mean_squared_error(y_test_original, y_pred)\n",
-    "r2 = r2_score(y_test_original, y_pred)\n",
-    "print(f\"Erro Quadrático Médio (MSE): {mse}\")\n",
-    "print(f\"Coeficiente de Determinação (R²): {r2}\")"
+    "\n"
    ]
   },
   {
@@ -7323,22 +7299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse treeino{mse_train}\n",
-      "r2 treino{r2_train}\n",
-      "Erro Quadrático Médio (MSE): 34717052.32987545\n",
-      "Coeficiente de Determinação (R²): 0.48769397395666314\n"
+      "mse treeino 35031681.33833955\n",
+      "r2 treino 0.4884241462336273\n",
+      "Erro Quadrático Médio (MSE): 34803648.74889145\n",
+      "Coeficiente de Determinação (R²): 0.48641610431283133\n"
      ]
     }
    ],
    "source": [
-    "dtree = DecisionTreeRegressor(max_depth=5, random_state=42, min_samples_split=10, min_samples_leaf=5)\n",
+    "dtree = DecisionTreeRegressor(max_depth=5, random_state=42, min_samples_split=15, min_samples_leaf=5)\n",
     "\n",
     "\n",
     "dtree.fit(X_train, y_train)\n",
@@ -7352,8 +7328,8 @@
     "mse_train = mean_squared_error(y_train, y_pred_train)\n",
     "r2_train = r2_score(y_train, y_pred_train)\n",
     "\n",
-    "print('mse treeino{mse_train}')\n",
-    "print('r2 treino{r2_train}')\n",
+    "print(f'mse treeino {mse_train}')\n",
+    "print(f'r2 treino {r2_train}')\n",
     "\n",
     "print(f\"Erro Quadrático Médio (MSE): {mse}\")\n",
     "print(f\"Coeficiente de Determinação (R²): {r2}\")"
